# qutang.dev

./: .gitignore  LICENSE  README.cn.md  README.md  netlify.toml  package.json  rollup.config.js  svelte.config.js
.github/: dependabot.yml
blog/: an-opinionated-curated-list-of-resources-for-phd-students.json
components/: ad.jsx  blog-item.jsx  copyright.jsx  footer.jsx  head.jsx  icon.jsx  ipynb.jsx  link.jsx  mailchimp.jsx  main.jsx  markdown.jsx  menu-button.jsx  menu-control.jsx  pagination.jsx  read-time.jsx  right-side.jsx  series.jsx  shortcut-item.jsx  shortcuts.jsx  side.jsx
content/: 404.html.mdx  admin.html.jsx  ads.txt  blog.html.jsx  config.yml  feed.json.js  (+3 more)
contents/: README  about.md  an-opinionated-curated-list-of-resources-for-phd-students.md  automated-puffing-and-smoking-detection.md  deep-learning-with-pytorch.ipynb  dnn-models-for-activity-recognition-using-ubiquitous-sensors.ipynb  index.md  metawear_syncing.ipynb  ml-linear-regression-statistical-inference.ipynb  ml-paper-review-collaboration-between-humans-and-machines-not-better.md  ml-paper-review-stop-reviewing-black-box.md  ml-statistical-inference-function-approximation.md  monthly-update-on-everything-2019-09.md  monthly-update-on-everything-2019-10.md  pyproject.toml  statistics-interrater-reliability.md  statistics-multiple-comparisons.md  survive-phd-in-us-for-chinese-students-language-problems.md  test-markdown-rendering.md  understand-lambda-calculus-with-python.ipynb  where-does-the-term-mhealth-come-from.md
contents/pages/: about.cn.md  about.md  index.cn.md  index.md
(+197 files in other folders)
