[tool.poetry]
name = "qutang.dev"
version = "0.1.0"
description = "Jupyter notebooks hosted on qutang.dev"
authors = ["Qu Tang <tang.q@northeastern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
