[tool.poetry]
name = "qutang.dev"
version = "0.1.0"
description = "Jupyter notebooks hosted on qutang.dev"
authors = ["Qu Tang <tang.q@northeastern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorboard = "^2.3.0"
matplotlib = "^3.3.1"
pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
