[tool.poetry]
name = "qutang.dev"
version = "0.1.0"
description = "Jupyter notebooks hosted on qutang.dev"
authors = ["Qu Tang <tang.q@northeastern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorboard = "^2.3.0"
matplotlib = "^3.3.1"
pillow = "^7.2.0"
h5py = "^2.10.0"
scikit-image = "^0.17.2"
regex = "^2020.7.14"
requests = "^2.24.0"
tqdm = "^4.48.2"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
